<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/grey2"
    android:id="@+id/layout_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tf_username"
        android:layout_marginTop="30dp"
        android:hint="@string/user_name"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/tf_password"
        android:layout_below="@+id/tf_username"
        android:layout_marginTop="30dp"
        android:hint="@string/user_password"
        android:textColor="@color/blue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:background="@drawable/selector_orange_btn"
        android:id="@+id/btn_login"
        android:layout_below="@+id/tf_password"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tv_forgot"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_new"
        android:background="@drawable/selector_orange_btn"
        android:id="@+id/btn_signup"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fb"
        android:background="@drawable/selector_orange_btn"
        android:id="@+id/btn_signup_facebook"
        android:layout_below="@+id/btn_signup"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_google"
        android:background="@drawable/selector_orange_btn"
        android:id="@+id/button_signup_google"
        android:layout_below="@+id/btn_signup_facebook"
        android:layout_marginTop="30dp" />

</RelativeLayout>
