<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gsc.com.mipasaje.SignUpActivity"
    android:id="@+id/layout_signup">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tf_username"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:hint="@string/user_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tf_email"
        android:layout_below="@+id/tf_username"
        android:layout_marginTop="30dp"
        android:hint="@string/user_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/tf_password"
        android:layout_below="@+id/tf_email"
        android:layout_marginTop="30dp"
        android:hint="@string/user_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/tf_repassword"
        android:layout_below="@+id/tf_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/user_repassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:background="@drawable/selector_orange_btn"
        android:id="@+id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tf_repassword"
        android:layout_marginTop="30dp" />
</RelativeLayout>
